location,agps: include support for MSB A-GPS

--- a/docs/man/mmcli.1
+++ b/docs/man/mmcli.1
@@ -400,6 +400,16 @@ or NMEA outputs are enabled with \fB\-\-location\-enable\-gps\-raw\fR or
 .B \-\-location\-disable\-agps-msa
 Disable A-GPS (MSA) support.
 .TP
+.B \-\-location\-enable\-agps-msb
+Enable A-GPS (MSB) support. This command does not implicitly start the GPS
+engine, it just specifies that A-GPS should be enabled when the engine is
+started. Therefore, the user should request enabling A-GPS before the raw
+or NMEA outputs are enabled with \fB\-\-location\-enable\-gps\-raw\fR or
+\fB\-\-location\-enable\-gps\-nmea\fR.
+.TP
+.B \-\-location\-disable\-agps-msb
+Disable A-GPS (MSB) support.
+.TP
 .B \-\-location\-enable\-gps\-nmea
 Enable location discovery using GPS and reported with NMEA traces.
 
@@ -893,7 +903,7 @@ to start the GPS engine.
 .Bd -literal -compact
     $ mmcli -m 0 --location-status
       --------------------------------
-      Location |      capabilities: 3gpp-lac-ci, gps-raw, gps-nmea, agps-msa
+      Location |      capabilities: 3gpp-lac-ci, gps-raw, gps-nmea, agps-msa, agps-msb
                |           enabled: 3gpp-lac-ci
                |           signals: no
       -----------------------------
@@ -924,7 +934,7 @@ XTRA assistance data is usually valid for several days.
 .Bd -literal -compact
     $ mmcli -m 0 --location-status
       --------------------------------
-      Location |         capabilities: 3gpp-lac-ci, gps-raw, gps-nmea, agps-msa
+      Location |         capabilities: 3gpp-lac-ci, gps-raw, gps-nmea, agps-msa, agps-msb
                |              enabled: 3gpp-lac-ci
                |              signals: no
       --------------------------------
